Important changes since GBBopen 1.2:

None yet


Important changes in GBBopen 1.2:

  * The :clos package nickname is no longer added by GBBopen, use the
    :gbbopen-tools package rather than :clos for CLOS/MOP entities

  * The Mini Module Facility has been renamed to Module Manager Facility
     - Module and package names have been renamed, as appropriate
         :mini-module -> :module-manager
         :mini-module-user -> :module-manager-user
         (the old names are defined as package nicknames)
     - Support for patches added
         *PATCHES-ONLY*
         DESCRIBE-PATCHES
         GET-PATCH-DESCRIPTION
         PATCH (also START-PATCH, CONTINUE-PATCH, FINISH-PATCH)
         PATCH-LOADED-P

  * Changes to GBBopen Core       
     - Renamed CHECK-LINK-CONSISTENCY to CHECK-LINK-DEFINITIONS
     - New :value argument to SAVE-BLACKBOARD-REPOSITORY replaces
       :after-load-function mechanism (this :value argument is also
       new in GBBopen Tool's WITH-SAVING/SENDING-BLOCK)

  * New Agenda Shell functions
     - CURRENT-CONTROL-SHELL
     - EXECUTED-KSAS-OF
     - OBVIATED-KSAS-OF
     - PENDING-KSAS-OF


Important changes in GBBopen 1.1:

  * New :gbbopen-tools functions and macros
     - DECF/DELETE-ACONS
     - DEFCM
     - PARSE-DATE

  * New :portable-threads macro
     - WITHOUT-LOCK-HELD

  * New :gbbopen-core functions
     - CHANGE-SPACE-INSTANCE
     - INITIAL-CLASS-INSTANCE-NUMBER
     - MAKE-DUPLICATED-INSTANCE
     - UNDUPLICATED-SLOT-NAMES

  * New class options in DEFINE-UNIT-CLASS, DEFINE-SPACE-CLASS, 
    DEFINE-KS-CLASS, and DEFINE-KSA-CLASS
     - :ESTIMATED-INSTANCES
     - :USE-GLOBAL-INSTANCE-NAME-COUNTER

  * New :SIZE option for a hashed-storage specification to
    MAKE-SPACE-INSTANCE

  * CLASS-DIRECT-METHODS removed from MOP interface (use 
    SPECIALIZER-DIRECT-METHODS instead)


Important changes in GBBopen 1.0:
  
  * Support added for set-composite dimension values and space-instance